# esp32-pressure-controller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  adc_esp32.c  adc_esp32.h  button.c  button.h  lv_conf.h  main.c  pressure_sensors.c  pressure_sensors.h  relay.c  relay.h  relay_control.c  relay_control.h  stor.c  stor.h  ui.c  ui.h  ui_v2.c  ui_v3.c  utils.h  wifi.c  wifi.h
